--- a/fixtures/partials/content.tmpl
+++ b/fixtures/partials/content.tmpl
@@ -1,2 +1,2 @@
-{{define "before-content"}}before {{ . }}{{end}}
-{{define "after-content"}}after {{ . }}{{end}}
+{{define "before-content"}}before {{ .Data }}{{end}}
+{{define "after-content"}}after {{ .Data }}{{end}}
